tests/pure/pure_def_impure_impl.sy
start : pu -> void : fn do
end

// error: Cannot use impure function implementations for pure function declarations
